test/files/neg/t10156.check
t10156.scala:4: error: could not find implicit value for parameter a: t10156.A
  val z = x _
          ^
one error found
